ingress/ingress-conception-experimentation-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: conception-experimentation-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - conception.experimentation.ca
    secretName: conception-tls-secret-staging
  rules:
  - host: conception.experimentation.ca
    http:
      paths:
      - backend:
          serviceName: nginx-fr
          servicePort: 80
        path: /
